# stock-insight

./: .gitignore  CLAUDE.md  README.md  TODOS.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 0644ccb71ef6_initial_tables.py  1c31615e8536_add_stock_last_price_sync_at.py  2b7f9c5a1d3e_add_daily_price_drivers.py  3785bdda88c3_add_news_disclosures_financials_.py  4ad65b395155_p1_6_v0_expand_stock_relations_add_.py  8067b4ac40ae_create_stock_relations_table.py  a1b2c3d4e5f6_add_analysis_unique_constraint.py  a3f4ec76d96d_create_macro_factors_table.py  a68d8f268caf_add_source_to_stock_relations_unique.py  b2c3d4e5f6a7_add_user_id_to_favorites.py  c60b0e84e26c_add_refresh_cooldowns_table.py  d775cc639fe7_add_stock_universe_tier_columns.py  e19721f8ce54_add_content_to_news.py  ea0ff8380505_add_card_data_schema_version_persona_.py  f1a2b3c4d5e6_add_political_signals.py  f2212d1d1fe4_add_chat_messages_table.py
backend/app/: config.py  database.py  dependencies.py  main.py  markets.py  scheduler.py
backend/app/api/: admin.py  analysis.py  auth.py  cards.py  chat.py  exchange_rates.py  favorites.py  ontology.py  stocks.py
backend/app/collectors/: disclosure.py  exchange_rate.py  financials.py  finnhub.py  fred.py  krx_flow.py  macro.py  news.py  publisher_whitelist.py  scraper.py  stock_lookup.py  stock_price.py  truth_social.py
backend/app/data/: ksic_to_gics.json  sic_to_gics.json
backend/app/mocks/: analysis.py  prices.py  (+2 more)
backend/scripts/: _gen_ksic_mapping.py  clean_noisy_news.py  eval_chat_tools.py  ontology_backfill.py  probe_chat_gaps.py  seed.py  seed_universe.py
backend/tests/: conftest.py  test_admin_api.py  test_analyst_tools.py  test_analyzer.py  test_api.py  test_auth.py  test_card_api.py  test_card_history.py  test_card_schema.py  test_collectors.py  test_compose_property.py  test_cost_killswitch.py  test_daily_drivers.py  test_data_layer.py  test_dedup.py  test_engine.py  test_indicators.py  test_llm.py  test_publisher_whitelist.py  test_research_agent.py  test_scheduler.py  test_scraper.py  test_stock_lookup.py  test_synthesizer.py  test_synthesizer_adversarial.py  test_us_news.py
(+212 files in other folders)
