[project]
name = "stockinsight-backend"
version = "0.4.0"
description = "StockInsight 주식 분석 대시보드 백엔드"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    "pydantic==2.11.1",
    "pydantic-settings==2.9.1",
    "sqlalchemy[asyncio]==2.0.40",
    "asyncpg==0.30.0",
    "alembic==1.15.2",
    "python-dotenv==1.1.0",
    "httpx==0.28.1",
    "openai>=1.0.0",
    "yfinance",
    "finance-datareader",
    "python-jose[cryptography]>=3.5.0",
    "apscheduler>=3.11.2",
    "psycopg2-binary>=2.9.11",
    "trafilatura>=2.0.0",
    "tavily-python>=0.7.24",
    "pyarrow>=24.0.0",
    "dartlab>=0.9.5",
    "beautifulsoup4>=4.14.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
addopts = "-m 'not smoke'"
markers = [
    "smoke: real-LLM end-to-end test (opt-in via -m smoke; consumes real budget)",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/mocks/*", "app/schemas/*"]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__",
]
fail_under = 95
